feat: add address to footer

--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@
                         <div class="row row-20 row-sm-35">
                             <div class="col-6 col-sm-12 col-lg-8 col-xl-12">
                                 <div class="row row-10 text-default">
+                                    <div class="col-lg-6 col-xl-12"><a href="mailto:contact@alesson.dev">R. Joaquim Ferreira, 553 - Jardim das Margaridas, <br> Salvador - BA, 41502-200</a>
+                                    </div>
                                     <div class="col-lg-6 col-xl-12"><a href="mailto:contact@alesson.dev">contact@alesson.dev</a>
                                     </div>
                                     <div class="col-lg-6 col-xl-12"><a class="big" href="tel:5561991585728">+55 (61)
