fix: hidden last number of cellphone

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                         <ul class="rd-navbar-nav">
                         </ul>
                         <div class="rd-navbar-tel">
-                            <p>Call Now</p><a href="tel:5561991585728">+55 (61) 99158-5728</a>
+                            <p>Call Now</p><a href="tel:556199158572x">+55 (61) 99158-572x</a>
                         </div>
                     </div>
                     <div class="rd-navbar-element"><a class="button button-sm button-default-outline button-winona"
-                                                      href="tel:5561991585728">Get a Quote</a>
+                                                      href="tel:556199158572x">Get a Quote</a>
                     </div>
                     <div class="rd-navbar-dummy"></div>
                 </div>
@@ -211,7 +211,7 @@
                                     <li>Increased exposure of products and services;</li>
                                     <li>Boundless universal accessibility.</li>
                                 </ul>
-                                <a class="button button-default button-winona" href="tel:5561991585728">Learn More</a>
+                                <a class="button button-default button-winona" href="tel:556199158572x">Learn More</a>
                             </div>
                             <div class="tab-pane fade" id="tabs-1-2">
                                 <p class="big">Our agency works to ensure the best quality solutions for
@@ -221,7 +221,7 @@
                                     <li>Planning & analysis;</li>
                                     <li>Development and implementation.</li>
                                 </ul>
-                                <a class="button button-default button-winona" href="tel:5561991585728">Learn More</a>
+                                <a class="button button-default button-winona" href="tel:556199158572x">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -243,7 +243,7 @@
                     </h5></a>
                         <p><span
                                 style="max-width: 250px;">Our agency provides quality software as service.</span>
-                        </p><a class="button button-sm button-default-outline button-winona" href="tel:5561991585728">Get
+                        </p><a class="button button-sm button-default-outline button-winona" href="tel:556199158572x">Get
                             in Touch</a>
                     </div>
                     <div class="col-sm-5 col-lg-9 col-xl-2">
@@ -255,8 +255,8 @@
                                     </div>
                                     <div class="col-lg-6 col-xl-12"><a href="mailto:contact@alesson.dev">contact@alesson.dev</a>
                                     </div>
-                                    <div class="col-lg-6 col-xl-12"><a class="big" href="tel:5561991585728">+55 (61)
-                                        99158-5728</a>
+                                    <div class="col-lg-6 col-xl-12"><a class="big" href="tel:556199158572x">+55 (61)
+                                        99158-572x</a>
                                     </div>
                                 </div>
                             </div>
